@@ -68,7 +68,7 @@ public class JettyCall extends HttpServerCall {
     }
 
     @Override
-    public Integer getClientPort() {
+    public int getClientPort() {
         return getConnection().getRequest().getRemotePort();
     }
 
